# yestty

./: README.md  meson.build
completions/: meson.build
completions/zsh/: _notty  _yestty
src/: common.h  libyestty.c  notty.c  yestty.c
